// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LeadBlockSection tests When user navigates with selected systems query string should render back to your selection button 1`] = `
<div>
  <div
    class="LeadBlockSection Section-root-167 Section-white-171"
  >
    <div
      class="Container-root-175"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <div
          class="MuiGrid-root LeadBlock-root-177 MuiGrid-container MuiGrid-spacing-xs-3"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
          >
            <div
              class="LeadBlock-leadBlockContentSection-179"
            >
              <svg
                class="brandLogo"
              />
            </div>
            <div
              class="LeadBlock-leadBlockContentSection-179"
            >
              <h1
                class="MuiTypography-root Typography-root-182 Typography-underline-184 MuiTypography-h1"
                data-testid="typography"
              >
                lead Block section
              </h1>
            </div>
            <div
              class="ctaContainer LeadBlock-leadBlockContentSection-179"
            >
              <a
                aria-disabled="false"
                class="MuiButtonBase-root MuiButton-root Button-root-190 MuiButton-text Button-text-191 backToYourSelectionBtn MuiButton-textPrimary MuiButton-textSizeLarge MuiButton-sizeLarge"
                data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"MC: sdp.leadBlock.backToYourSelection\\",\\"action\\":\\"system-configurator-page?referer=sys_details\\"}"
                href="system-configurator-page?referer=sys_details"
                rel="noopener noreferrer"
                tabindex="0"
              >
                <span
                  class="MuiButton-label Button-label-193"
                >
                  <span
                    class="MuiButton-startIcon Button-startIcon-194 MuiButton-iconSizeLarge"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                      />
                    </svg>
                  </span>
                  MC: sdp.leadBlock.backToYourSelection
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </a>
              <button
                class="MuiButtonBase-root MuiButton-root Button-root-190 MuiButton-contained Button-contained-192 quotationBtn MuiButton-containedPrimary"
                data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"cta label\\",\\"action\\":\\"https://www.external.co.uk\\"}"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label Button-label-193"
                >
                  cta label
                  <span
                    class="MuiButton-endIcon MuiButton-iconSizeMedium"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                      />
                    </svg>
                  </span>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LeadBlockSection tests should not render systemAttributes Card with empty uniqueSellingPropositions 1`] = `
<div>
  <div
    class="LeadBlockSection Section-root-124 Section-white-128"
  >
    <div
      class="Container-root-132"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <div
          class="MuiGrid-root LeadBlock-root-134 MuiGrid-container MuiGrid-spacing-xs-3"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
          >
            <div
              class="LeadBlock-leadBlockContentSection-136"
            >
              <svg
                class="brandLogo"
              />
            </div>
            <div
              class="LeadBlock-leadBlockContentSection-136"
            >
              <h1
                class="MuiTypography-root Typography-root-139 Typography-underline-141 MuiTypography-h1"
                data-testid="typography"
              >
                lead Block section
              </h1>
            </div>
            <div
              class="ctaContainer LeadBlock-leadBlockContentSection-136"
            >
              <button
                class="MuiButtonBase-root MuiButton-root Button-root-147 MuiButton-contained Button-contained-149 quotationBtn MuiButton-containedPrimary"
                data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"cta label\\",\\"action\\":\\"https://www.external.co.uk\\"}"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label Button-label-150"
                >
                  cta label
                  <span
                    class="MuiButton-endIcon MuiButton-iconSizeMedium"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                      />
                    </svg>
                  </span>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LeadBlockSection tests should render 1`] = `
<div>
  <div
    class="LeadBlockSection Section-root-1 Section-white-5"
  >
    <div
      class="Container-root-9"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <div
          class="MuiGrid-root LeadBlock-root-11 MuiGrid-container MuiGrid-spacing-xs-3"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
          >
            <div
              class="LeadBlock-leadBlockContentSection-13"
            >
              <svg
                class="brandLogo"
              />
            </div>
            <div
              class="LeadBlock-leadBlockContentSection-13"
            >
              <h1
                class="MuiTypography-root Typography-root-16 Typography-underline-18 MuiTypography-h1"
                data-testid="typography"
              >
                lead Block section
              </h1>
            </div>
            <div
              class="ctaContainer LeadBlock-leadBlockContentSection-13"
            >
              <button
                class="MuiButtonBase-root MuiButton-root Button-root-24 MuiButton-contained Button-contained-26 quotationBtn MuiButton-containedPrimary"
                data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"cta label\\",\\"action\\":\\"https://www.external.co.uk\\"}"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label Button-label-27"
                >
                  cta label
                  <span
                    class="MuiButton-endIcon MuiButton-iconSizeMedium"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                      />
                    </svg>
                  </span>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LeadBlockSection tests should render with uniqueSellingPropositions 1`] = `
<div>
  <div
    class="LeadBlockSection Section-root-45 Section-white-49"
  >
    <div
      class="Container-root-53"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <div
          class="MuiGrid-root LeadBlock-root-55 MuiGrid-container MuiGrid-spacing-xs-3"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
          >
            <div
              class="LeadBlock-leadBlockContentSection-57"
            >
              <svg
                class="brandLogo"
              />
            </div>
            <div
              class="LeadBlock-leadBlockContentSection-57"
            >
              <h1
                class="MuiTypography-root Typography-root-60 Typography-underline-62 MuiTypography-h1"
                data-testid="typography"
              >
                lead Block section
              </h1>
            </div>
            <div
              class="ctaContainer LeadBlock-leadBlockContentSection-57"
            >
              <button
                class="MuiButtonBase-root MuiButton-root Button-root-68 MuiButton-contained Button-contained-70 quotationBtn MuiButton-containedPrimary"
                data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"cta label\\",\\"action\\":\\"https://www.external.co.uk\\"}"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label Button-label-71"
                >
                  cta label
                  <span
                    class="MuiButton-endIcon MuiButton-iconSizeMedium"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                      />
                    </svg>
                  </span>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
          <div
            class="MuiGrid-root card MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-4"
            data-testid="system-attributes-card"
          >
            <div
              class="ColorPair-root-92 ColorPair-pearl-94"
            >
              <div
                class="PostItCard-root-88"
              >
                <div
                  class="PostItCard-section-89"
                >
                  <div
                    class="iconList"
                  >
                    <ul
                      class="IconList-root-118"
                    >
                      <li
                        class="IconList-listItem-119 IconList-isCompact-120"
                      >
                        <div
                          class="IconList-icon-121"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root BlueCheckIcon-root-44"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                            />
                          </svg>
                        </div>
                        <div
                          class="IconList-content-122"
                        >
                          <p
                            class="MuiTypography-root Typography-root-60 MuiTypography-body1"
                            data-testid="typography"
                          >
                            feature 1
                          </p>
                        </div>
                      </li>
                      <li
                        class="IconList-listItem-119 IconList-isCompact-120"
                      >
                        <div
                          class="IconList-icon-121"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root BlueCheckIcon-root-44"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                            />
                          </svg>
                        </div>
                        <div
                          class="IconList-content-122"
                        >
                          <p
                            class="MuiTypography-root Typography-root-60 MuiTypography-body1"
                            data-testid="typography"
                          >
                            feature 2
                          </p>
                        </div>
                      </li>
                    </ul>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
